--- a/BookLoggerApp/wwwroot/index.html
+++ b/BookLoggerApp/wwwroot/index.html
@@ -31,7 +31,12 @@
 
     <div class="status-bar-safe-area"></div>
 
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div class="app-loading">
+            <div class="loading-spinner"></div>
+            <p>BookLogger</p>
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
