--- a/BookLoggerApp/wwwroot/index.html
+++ b/BookLoggerApp/wwwroot/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/reading-timer-inline.css" />
     <link rel="stylesheet" href="css/ratings.css" />
     <link rel="stylesheet" href="css/userprogress.css" />
+    <link rel="stylesheet" href="css/stats.css" />
     <link rel="stylesheet" href="css/celebrations.css" />
     <link rel="stylesheet" href="css/barcode-scanner.css" />
     <link rel="stylesheet" href="css/plantshop.css" />
@@ -43,6 +44,9 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
+    <!-- Animation control for performance optimization -->
+    <script src="js/animation-control.js"></script>
 
     <!-- Quagga.js for barcode scanning -->
     <script src="https://cdn.jsdelivr.net/npm/@ericblade/quagga2@1.8.4/dist/quagga.min.js"></script>
