--- a/BookLoggerApp/wwwroot/index.html
+++ b/BookLoggerApp/wwwroot/index.html
@@ -34,7 +34,7 @@
 
     <div id="app">
         <div class="app-loading">
-            <div class="loading-spinner"></div>
+            <div class="heart-loader"></div>
             <p>BookLogger</p>
         </div>
     </div>
