Migrate to native MAUI barcode scanning with ZXing.Net

--- a/BookLoggerApp/wwwroot/index.html
+++ b/BookLoggerApp/wwwroot/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/bottomnav.css" />
     <link rel="stylesheet" href="css/dashboard.css" />
     <link rel="stylesheet" href="css/bookdetail.css" />
-    <link rel="stylesheet" href="css/bookedit.css" />
+    <link rel="stylesheet" href="css/bookedit.css?v=2" />
     <link rel="stylesheet" href="css/plantwidget.css" />
     <link rel="stylesheet" href="css/plant-selection.css" />
     <link rel="stylesheet" href="css/quicktimer.css" />
