Lazy load book cover images with IntersectionObserver
Implement lazy loading of book cover images in BookCard using a JS IntersectionObserver and Blazor interop, loading images only when cards enter the viewport. Add a new lazyLoading.js helper and update index.html to include it. Use <Virtualize> for search results in Bookshelf.razor for efficient rendering. Refactor ViewModel LoadAsync methods for safer DB access and ensure test DB initialization. Improves performance and memory usage for large book lists.

--- a/BookLoggerApp/wwwroot/index.html
+++ b/BookLoggerApp/wwwroot/index.html
@@ -49,6 +49,7 @@
 
     <!-- Animation control for performance optimization -->
     <script src="js/animation-control.js"></script>
+    <script src="js/lazyLoading.js"></script>
 
 
 
