--- a/BookLoggerApp/wwwroot/index.html
+++ b/BookLoggerApp/wwwroot/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/celebrations.css" />
 
     <link rel="stylesheet" href="css/plantshop.css" />
+    <link rel="stylesheet" href="css/wishlist.css" />
     <link rel="stylesheet" href="BookLoggerApp.styles.css" />
     <link rel="icon" href="data:,">
 </head>
