--- a/BookLoggerApp/wwwroot/index.html
+++ b/BookLoggerApp/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <title>LoveLit</title>
+    <title>BookHeart</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
@@ -38,7 +38,7 @@
     <div id="app">
         <div class="app-loading">
             <div class="heart-loader"></div>
-            <p>LoveLit</p>
+            <p>BookHeart</p>
         </div>
     </div>
 
