--- a/BookLoggerApp/wwwroot/index.html
+++ b/BookLoggerApp/wwwroot/index.html
@@ -51,8 +51,7 @@
     <!-- Animation control for performance optimization -->
     <script src="js/animation-control.js"></script>
     <script src="js/lazyLoading.js"></script>
-
-
+    <script src="js/bookshelfDragDrop.js"></script>
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
 
